aula27/nginx-lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lab
  namespace: rbac-lab
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
