aula27/nginx-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-prod
  namespace: rbac-prod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
